# hidock-next

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  AGENTS.md  CHANGELOG.md  CHANGES-114e.md  CHANGES-AUD2-001.md  CHANGES-AUD2-002.md  CHANGES-AUD5-002.md  CHANGES-P1-CODESPLIT.md  CHANGES-WAVE2-WAVEFORM.md  CHANGES-inline-expansion.md  CHANGES.md  CHANGES_spec-006.md  CHANGES_spec-010.md  CHANGES_spec-013.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION-VERIFICATION.md  INDEX.md  INDEX_AGENTS.md  LICENSE  MANUAL-VERIFICATION-CHECKLIST.md  Makefile  PERFORMANCE_ANALYSIS.md  PHASE1-ACTIONABLES-COMPLETE.md  PHASE1-LIBRARY-COMPLETE.md  PRODUCT_BACKLOG_CALENDAR_INTEGRATION.md  QUICK_START.md  README.md  RELEASE_NOTES.md  VERIFICATION-AUD5-001.md  WARP.md  WAVE2-004-005-CHANGES.md  build-electron.bat  build-electron.sh  (+26 more)
.claude/: workflow-state-meeting-assistant.md
.code-review/: file-categorization.md  high-priority-review.md
.gemini/: DevAgent.md  settings.json  system.md
.github/: CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
.wave/: NOTES.md
apps/: README.md
audio-insights-extractor/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
config/: .hinotes.config.example  README.md
docs/: ACCEPTANCE_CRITERIA.md  API.md  CALENDAR_INTEGRATION_GUIDE.md  CALENDAR_INTEGRATION_INDEX.md  CALENDAR_QUICK_START.md  CLEANUP_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW_REPORT.md  HIDOCK_DESKTOP_DEVELOPMENT.md  HIDOCK_DESKTOP_TEST_COVERAGE.md  INDEX.md  MASTER_DOCUMENTATION_INDEX.md  PRE-COMMIT.md  PROTOCOL_IMPLEMENTATION_PLAN.md  README.md  REFERENCE_HIDOCK.md  REPO_REVIEW.md  ROADMAP.md  SECURITY_RECOMMENDATIONS.md  SETTINGS_AND_TEST_IMPROVEMENTS.md  SETUP.md  TECHNICAL_SPECIFICATION.md  TESTING.md  TEST_CONTAMINATION_AUDIT_REPORT.md  TROUBLESHOOTING.md  VENV.md  VSCODE_CONFIGURATION.md  dashboard-desktop-plan.md  session-summary-2026-03-14.md
documentation/: HiDock-H1E-Linux-USB-Power-Management.md  README.md  audio_analysis.txt  hidock-api-documentation.md  hidock-h1e-reverse-engineering-results.md  hidock-protocol-summary.txt  protocol_analysis_setup.txt
firmware/: README.md
hidock-desktop-app/: .flake8  AGENT.md  CALENDAR_INTEGRATION_TEST_SETUP.md  CLAUDE.md  README.md  _version.py  async_calendar_mixin.py  audio_player.py  audio_player_enhanced.py  audio_processing_advanced.py  audio_visualization.py  calendar_cache_manager.py  calendar_disabled.py  calendar_service.py  check_formatting.py  column_sorting_example.py  config_and_logger.py  constants.py  coverage.xml  desktop_device_adapter.py  device_interface.py  enhanced_device_selector.py  enhanced_gui_integration.py  file_operations_manager.py  fix_remaining_tests.py  gui_actions_device.py  gui_actions_file.py  gui_auxiliary.py  gui_event_handlers.py  gui_main_window.py  gui_treeview.py  hidock_config.json  hidock_config.json.example  hidock_device.py  hidock_tool_config.json.example  hta_converter.py  main.py  manual_outlook_calendar_test.py  offline_mode_manager.py  outlook_calendar_service.py  (+18 more)
hidock-desktop-app/docs/: ADVANCED_VISUALIZATIONS.md  ARCHITECTURE_PLAN.md  AUDIO_PLAYBACK_UX.md  BUG_LIST.md  CODE_QUALITY_FIXES.md  COMPREHENSIVE_LINTING_FIXES.md  CodeReview.md  DEVICE_FALLBACK_SPEC.md  DEVICE_FALLBACK_TEST_RESULTS.md  DEVICE_TEST_ANALYSIS.md  DesktopGUI_refactor.md  FEATURE_REQUESTS.md  PERFORMANCE_OPTIMIZATIONS.md  RACE_CONDITION_FIX.md  SECURITY_LIST.md  SETTINGS_OPTIMIZATION_COMPLETE.md  SETTINGS_OPTIMIZATION_IMPLEMENTATION.md  SETTINGS_PERSISTENCE_FIX.md  SETTINGS_SAVE_ANALYSIS.md  SETTINGS_USAGE_GUIDE.md  USB_DEVICE_SELECTION_SPEC.md  UX_PLAN.md  test_coverage.md
hidock-desktop-app/test_utilities/: check_calendar_cache.py  check_calendar_date.py  check_meeting_times.py  check_outlook_directly.py  clear_calendar_cache.py  debug_cache_contents.py  debug_calendar_integration.py  debug_datetime_parsing.py  debug_meeting_display.py  diagnose_calendar_cache.py  diagnose_calendar_date.py  migrate_calendar_cache.py  run_minimal_coverage.py  run_tests_coverage.py  simple_cache_debug.py  simple_calendar_mixin.py  simple_calendar_test.py  simple_outlook_integration.py  test_cached_files_enhancement.py  test_calendar_display_fix.py  test_calendar_integration_complete.py  test_calendar_performance.py  test_calendar_refresh.py  test_calendar_refresh_ui.py  test_date_formats.py  test_fixes_validation.py  test_focused_coverage.py  test_full_sync_enhancement.py  test_gui_startup_simple.py  test_gui_treeview_debug.py  test_startup.py  verify_gui_startup.py  verify_meeting_display.py
hidock-desktop-app/tests/: FINAL_COMPLETION_REPORT.md  audit_contamination_risks.py  conftest.py  settings_window_test_plan.md  test_advanced_audio_features.py  test_advanced_config_logging.py  test_async_calendar_mixin.py  test_audio_player.py  test_audio_player_enhanced.py  test_audio_processing_advanced.py  test_audio_visualization.py  test_audio_visualization_edge_cases.py  test_audio_visualization_enhanced.py  test_ci_skip.py  test_config_and_logger.py  test_config_and_logger_coverage.py  test_config_update_function.py  test_config_validation_fix.py  test_connection_recovery_integration.py  test_constants.py  test_desktop_device_adapter_comprehensive.py  test_device_communication.py  test_device_fallback_mocked.py  test_device_interface.py  test_device_reset.py  test_device_reset_simple.py  test_device_selector_comprehensive.py  test_device_selector_fix.py  test_device_selector_method.py  test_disconnected_mode_integration.py  test_file_operations_manager_consolidated.py  test_fixes.py  test_gui_actions_device.py.bak  test_gui_actions_file.py.bak  test_gui_components.py  test_gui_treeview.py.bak  test_hidock_device_commands.py  test_hidock_device_connection.py  test_hidock_device_file_operations.py  test_hidock_device_settings.py  (+31 more)
hidock-desktop-app/themes/: README.md
hidock-desktop-app/themes/theme/: dark.tcl  light.tcl
hidock-web-app/: .env.example  (+12 more)
(+2056 files in other folders)
