[metadata]
name = hidock-next
version = 0.0.0
license = MIT
description = HiDock Next tooling shim package for editable installs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.12
packages = find:
include_package_data = False
zip_safe = False

[options.packages.find]
# We only expose the shim package; real modules are imported via path injection.
where = .
include = hidock_shims

[options.extras_require]
desktop =
    customtkinter>=5.2.0
    pyusb>=1.2.1
audio =
    numpy>=1.26
    pydub>=0.25.1
    pygame>=2.5.0
integration =
    requests>=2.32.0

dev =
    pytest>=8.2
    pytest-asyncio>=0.23
    ruff>=0.5.0
    black>=24.4
    isort>=5.13

